--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Import 3D GLTF images into Blender",
   "author": {
     "name": "Excodibur",
-    "email": "excodibur@posteo.de"
+    "email": "non@existant.com"
   },
   "homepage": "https://github.com/Excodibur/ioBroker.vis-3dmodel",
   "license": "MIT",
