--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -8,7 +8,7 @@ on:
   push:
     paths:
       - 'docs/**.adoc'
-      - !'docs/release-documentation.adoc'
+      - '!docs/release-documentation.adoc'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
