--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "@alcalzone/release-script": "^1.8.3",
     "@iobroker/testing": "^2.3.0",
     "@types/gulp": "^4.0.7",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "gulp": "^4.0.2"
   },
   "main": "widgets/3dmodel.html",
   "scripts": {
     "test:package": "mocha test/package --exit",
-    "test": "npm run test:package"
+    "test": "npm run test:package",
+    "release": "release-script"
   },
   "bugs": {
     "url": "https://github.com/Excodibur/ioBroker.vis-3dmodel/issues"
