--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -69,7 +69,7 @@ jobs:
 
       # Change latest link in case there is a new documentation available
       - name : Modify gh-pages branch
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
         with:
           ref: gh-pages
 
