--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -78,6 +78,7 @@ jobs:
         run: |
           echo "tag is latest. need to update latest-symlink in gh-pages branch"
           ln -f -s doc-${{ steps.prepare_tag.outputs.deploy_tag_name }} latest
+          git config user.name Excodibur
           git add latest
           git commit --amend
           git push gh-pages origin
