--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -80,7 +80,7 @@ jobs:
           ln -f -s doc-${{ steps.prepare_tag.outputs.deploy_tag_name }} latest
           git config user.name Excodibur
           git add latest
-          git commit --amend --no-edit
+          git commit --amend -m "updated symlink to doc-${{ steps.prepare_tag.outputs.deploy_tag_name }}"
           git push gh-pages origin
 
 
