--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -77,11 +77,11 @@ jobs:
         if: ${{ steps.prepare_tag.outputs.is_latest}}
         run: |
           echo "tag is latest. need to update latest-symlink in gh-pages branch"
-          ln -f -s doc-${{ steps.prepare_tag.outputs.deploy_tag_name }} latest
+          ln -f -s ${{ steps.prepare_tag.outputs.deploy_tag_name }} latest
           git config user.name Excodibur
           git add latest
-          git commit --amend -m "updated symlink to doc-${{ steps.prepare_tag.outputs.deploy_tag_name }}"
-          git push gh-pages origin
+          git commit --amend -m "updated symlink to ${{ steps.prepare_tag.outputs.deploy_tag_name }}"
+          git push gh-pages
 
 
       
