--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -35,7 +35,10 @@ jobs:
 
             - name: Install Dependencies
               run: npm ci
-
+              
+            - name: Lint TypeScript code
+              run: npm run lint
+            
             - name: Test package files
               run: npm run test:package
 
