--- a/package.json
+++ b/package.json
@@ -26,11 +26,18 @@
     "@iobroker/testing": "^2.3.0",
     "@types/gulp": "^4.0.7",
     "axios": "^0.21.1",
+    "eslint": "^7.19.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-html": "^6.1.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
     "gulp": "^4.0.2"
   },
   "main": "widgets/3dmodel.html",
   "scripts": {
     "test:package": "mocha test/package --exit",
+    "lint": "eslint --ext .js widgets/*",
     "test": "npm run test:package",
     "release": "release-script"
   },
