--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.vis-3dmodel",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "Import 3D GLTF images into Blender",
   "author": {
     "name": "Excodibur",
@@ -34,7 +34,7 @@
     "eslint-plugin-promise": "^4.3.1",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
-    "gulp-uglify": "^3.0.2",
+    "gulp-terser": "^2.0.1",
     "loglevel": "^1.7.1",
     "readable-stream": "^3.6.0",
     "three": "^0.127.0"
